Fixed sticky element issue on safari browser

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ header {
   box-shadow: 0 0 0 100vmax var(--background-colour);
   clip-path: inset(0 -100vmax);
   z-index: 1;
+  transform: translate3d(0, 0, 0);
 }
 
 #Search {
@@ -43,6 +44,7 @@ header {
   background: linear-gradient(var(--background-colour) 90%, rgba(0, 0, 0, 0));
   box-shadow: 0 0 0 100vmax var(--background-colour);
   clip-path: inset(0 -100vmax);
+  transform: translate3d(0, 0, 0);
 }
 
 .search {
@@ -77,6 +79,7 @@ nav {
   box-shadow: 0 0 0 100vmax var(--background-colour);
   clip-path: inset(0 -100vmax);
   padding: 3vh;
+  transform: translate3d(0, 0, 0);
 }
 
 .NavLink {
